--- a/Paper/tracing.tex
+++ b/Paper/tracing.tex
@@ -64,7 +64,11 @@
 \newcommand{\refdef}[1]{{Def.~(\ref{#1})}} 
 
 \title{A tracing facility for Nonsmooth Model Behavior in OpenAD}
-\author{J. Utke}
+\author{J. Utke\\\\
+        \small Preprint version: \input{versionInfo.txt} compiled for \\
+        \small OpenAD version: \input{versionInfoOpenAD.txt}\\
+        \small xaifBooster version: \input{versionInfoxaifBooster.txt}\\
+}
 \date{ }
 
 \fancyhead[RE]{\leftmark}
@@ -96,11 +100,11 @@ as well as the application of automatic differentiation (AD).
 Griewank devotes an entire chapter in \cite{Gri00} 
 to the scenario of applying an AD tool to cases without differentiability. 
 In practice one observes various cases where the derivatives computed by AD are useless 
-because their numerical values grow  beyond reasonable bounds \cite{bischof} or even 
+because their numerical values grow  beyond reasonable bounds \cite{tfs-delayed,tfs-chain} or even 
 become NaNs. 
 In the latter case one might have the option to let a suitable compiler generate 
 code to detect floating point exceptions to help locate the origin of the problem.
-The AD  tool ADIFOR \cite{adifor} also has built-in  option to detect 
+The AD  tool ADIFOR \cite{adiforWeb} also has built-in  option to detect 
 such situations by adding checks to the generated code.   
 In the former case when no NaNs are created it is however very difficult to 
 detect what feature of the numerical model causes the derivative values to explode. 
@@ -120,7 +124,7 @@ The situation with the disctinct subdomains is described to illustrate
 certain aspects of using Adol-C in \cite{adolc} and we 
 replicate it here in \reffig{fig:subdomains}. 
 \begin{figure}
-\centerline{\includegraphics[height=2.2cm]{nonsmooth1}}
+\centerline{\includegraphics[width=6cm]{nonsmooth1}}
 \caption{A nonsmooth model with subdomains}\label{fig:subdomains} 
 \end{figure}
 The model is first evaluated at point P0.  Relative to P0 we distinguish the 
@@ -172,8 +176,8 @@ collected to reduce the amount of tracing data that has to be dealt with.
 \section{Usage}
 
 The source transformation that provides the tracing facility is implemented in the 
-OpenAD framework \cite{openad}. The website 
-\centerline{\url{www.mcs.anl.gov/openad}}
+OpenAD framework \cite{openad}. The website\\ 
+\centerline{\url{www.mcs.anl.gov/openad}}\\
 provides details on the downloading and building the tool chain. 
 
 \subsection{One Minute Example}
@@ -189,17 +193,23 @@ We need to prepare the code for the activity analysis by specifying the indpende
 \caption{Augmented code from \reffig{fig:oneMinute}}\label{fig:oneMinutePrepped}
 \end{figure}
 In the following we assume the OpenAD environment has been set up as 
-described in \cite{manual} Sect. 2.2.
+described in \cite{userManual} Sect. 2.2.
 For this simple example we can use the  wrapper script\\
-\hspace{1cm}\lstinline{\$OPENADROOT/bin/openad}\\
+\hspace*{1cm}\lstinline{$OPENADROOT/bin/openad}\\ #$
 The directory should have been added to the \lstinline{PATH}. 
 It provides a simple recipe for the tracing transformation that we can use in 
 a straightforward case like this. When invoked like\\  
-\hspace{1cm}\lstinline{openad -m t head.prepped.f90}\\
+\hspace*{1cm}\lstinline{openad -m t head.prepped.f90}\\
 it produces some progress output on the screen like this
 {\tiny
 \verbatimfile{OneMinuteStatusOutput.txt}
 }
+The resulting fortran output is contained in a file called \lstinline{head.prepped.xb.x2w.w2f.pp.f} and 
+its contents is shown in \reffig{fig:OneMinuteTransformed}  
+\begin{figure}
+\lstinputlisting{Code/OneMinuteExample/head.prepped.xb.x2w.w2f.pp.f}
+\caption{Simple example code}\label{fig:oneMinute}
+\end{figure}
 
 
 
@@ -210,7 +220,7 @@ it produces some progress output on the screen like this
 
 \subsection{Transformation Stages}
 The transformation of the source code is performed in stages in the same fashion as 
-outlined in the OpenAD Manual \cite{openadManual}. 
+outlined in the OpenAD Manual \cite{userManual}. 
 The differences in the tool chain are the choice of the transformation algorithm 
 in the xaifBooster component and the selection of the runTime library in connection with 
 the postprocessor templates. 
@@ -325,7 +335,7 @@ subsequent active computations.
 i = int(a) 
 a = a * t(i)
 \end{lstlisting}
-\caption{An address computation into a lookup table impacting the subsequent computation}\label{fig:subdomains} 
+\caption{An address computation into a lookup table impacting the subsequent computation}\label{fig:addressComp} 
 \end{figure}
 Unfortunately the definition of ``indirectly usefull'' cannot be directly used in a 
 data flow analysis engine. 
@@ -356,9 +366,9 @@ In \refsec{sec:analysis} we discuss the practical implementation.
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 \subsection{Growing Derivatives}
 In various practical applications of AD it was observed that particularly in iterative
-models the are cases where the  computed derivatives beyond a certain iteration count 
-start to oscillate and grow out of bounds. 
-This was described for instance in \cite{bischof}. 
+models the are cases where the  computed derivatives before a certain iteration count 
+oscillate and grow out of bounds. 
+This was described for instance in \cite{tfs-delayed}. 
 We do not presume any knowledge about origin of the nonsmooth behavior, for instance
 it may well originate with an erroneous implementation of a numerical method. 
 A simple example should illustrate how oscillating derivatives and the growth 
@@ -370,7 +380,7 @@ a phase change and the temperature of the material is forced down to a certain a
 value on the boundary of the model domain. 
 In the iterative process one first observes a smooth rise in temperature until the 
 regime that governs the phase change triggers a nonsmooth behavior. 
-The situtation is illustrated in \reffig{growingExample}.
+The situtation is illustrated in \reffig{fig:growingExample}.
 \begin{figure}
 \begin{lstlisting}
 do while time .lt. timeEnd
@@ -453,7 +463,7 @@ c$openad DEPENDENT(y)
 
  
 The tool OpenAD \cite{openad} is the basis for the actual implementation. 
-It uses the activity analysis implemented in the OpenAnalysis \cite{OpenAnalysis} library 
+It uses the activity analysis implemented in the OpenAnalysis \cite{oaWeb} library 
 to obtain the set of active variables. 
 
  
