3 examples added and accompanying text

--- a/Paper/tracing.bib
+++ b/Paper/tracing.bib
@@ -401,6 +401,13 @@
   howpublished  = {\url{http://www.mcs.anl.gov/xaif}}
 } 
 
+@MISC {           xmlformat,
+  author        = {{XML} Document Formatter},
+  year          = {2006},
+  howpublished  = {\url{http://www.kitebird.com/software/xmlformat/}}
+} 
+
+
 @InProceedings{   Utk04FBB,
   author        = {J. Utke},
   title         = {Flattening basic blocks},
